--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
-<body>
-    <h1>hola mundo</h1>
-    <p>esto es un pärrafo</p>
+
+<body> turismo local 
+   <header>
+    <img src="imagenes/appreciated! (1).png" width="250px">
+
+    <h1 class="título">Shekina TL</h1>
+    
+    <nav>
+        <ul> 
+            <li>quienes somos</li>
+           <a href="https://www.sannicolasciudad.gob.ar/"><li>centros turisticos locales</li></a> 
+            <li>contacto</li>
+        </ul>
+
+
+    </nav>
+
+
+   </header>
+   <p class="Bienvenidos">Bienvenidos</p>
+   
+<form>
+    <h2>Registro</h2>
+    <input type="text" placeholder="Nombre">
+    <input type="text" placeholder="Apellido">
+    <input type="email" placeholder="Correo elctronico">
+    <input type="password" placeholder="Contraseña">
+    <input type="password" placeholder="Confirmar contraseña">
+    <input type="submit" class="btn" value="enviar">
+
+</form>
+
+<h1>Visitas guiadas</h1>
+<h2>Atractivos locales</h2>
+<h3>Contacto con la naturaleza</h3>
+<h4>Recreación</h4>
+<h5>Aventura</h5>
+<h6>Descanso</h6>
+
 </body>
 </html>
