--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 
 </head>
 
-<body> turismo local 
+<body class="Turismo"> Turismo local </body>
    <header>
     <img src="imagenes/appreciated! (1).png" width="250px">
 
     <h1 class="título">Shekina TL</h1>
+    
     
     <nav>
         <ul> 
@@ -38,14 +39,15 @@
     <input type="password" placeholder="Confirmar contraseña">
     <input type="submit" class="btn" value="enviar">
 
+
 </form>
 
-<h1>Visitas guiadas</h1>
-<h2>Atractivos locales</h2>
-<h3>Contacto con la naturaleza</h3>
-<h4>Recreación</h4>
-<h5>Aventura</h5>
-<h6>Descanso</h6>
+<h1 class="texto">Visitas guiadas</h1>
+<h2 class="Atractivos"> Atractivos locales</h2>
+<h3 class="Contacto"> Contacto con la naturaleza</h3>
+<h4 class="Recreo">Recreación</h4>
+<h5 class="Avent">Aventura</h5>
+<h6 class="Des">Descanso</h6>
 
 </body>
 </html>
