--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
    </header>
    <p class="Bienvenidos">Bienvenidos</p>
    
+   <div class="at1">
+    <div class="at2">
+        <div class="at3">
+            <div class="at4">
+
+            </div>
+        </div>
+    </div>
+   </div>
+
+   
+
 <form>
     <h2>Registro</h2>
     <input type="text" placeholder="Nombre">
