--- a/index.html
+++ b/index.html
@@ -40,16 +40,19 @@
     </div>
    </div>
 
-   
+   <li class="Atp1"> El Yaguaron</li>
+   <li class="Atp2"> Ecoparque</li>
+   <li class="Atp3"> Teatro</li>
+   <li class="Atp4"> Autodromo</li>
 
 <form>
-    <h2>Registro</h2>
-    <input type="text" placeholder="Nombre">
-    <input type="text" placeholder="Apellido">
-    <input type="email" placeholder="Correo elctronico">
-    <input type="password" placeholder="Contraseña">
-    <input type="password" placeholder="Confirmar contraseña">
-    <input type="submit" class="btn" value="enviar">
+    <h2 class="Regist">Registro</h2>
+    <input type="Name" placeholder="Nombre"> 
+    <input type="Surname" placeholder="Apellido">
+    <input type="Email" placeholder="Correo elctronico">
+    <input type="Password" placeholder="Contraseña">
+    <input type="Password" placeholder="Confirmar contraseña">
+    <input type="Submit" class="btn" value="Enviar">
 
 
 </form>
